--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
   "name": "bootstrap-jstree-theme",
   "version": "0.0.0",
-  "homepage": "https://github.com/aaronup/jstree-bootstrap-theme",
+  "homepage": "https://bitbucket.org/aupshaw/bootstrap-jstree-theme/overview",
   "authors": [
     "Aaron Upshaw"
   ],
