--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
     "name": "bootstrap-jstree-theme",
-    "version": "0.2.0",
+    "version": "0.2.1",
     "homepage": "https://bitbucket.org/aupshaw/bootstrap-jstree-theme/overview",
     "authors": [
         "Aaron Upshaw"
@@ -12,6 +12,7 @@
         "jstree",
         "themes"
     ],
+    "main": "dist/themes/bootstrap/style.css",
     "license": "MIT",
     "ignore": [
         "**/.*",
